--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "jwks-rsa": "^2.0.5",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   },
